Fixed text overflow

--- a/03_dom-lectures/todo-list/assets/css/style.css
+++ b/03_dom-lectures/todo-list/assets/css/style.css
@@ -47,9 +47,12 @@ ul {
 
 li {
   background-color: #fff;
+  color: #33333;
   height: 40px;
   line-height: 40px;
-  color: #33333;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 li:nth-child(2n) {
